新增：关注及粉丝的显示优化
yiyuhao
2017年7月30日 11:41:15

--- a/todo.html
+++ b/todo.html
@@ -1,13 +1,14 @@
 注释代表已完成
 
-1、 暂不解决-修改资料验证不通过时，返回原字段而非用户填写后的bug
+1、 暂不解决-易用性-修改资料验证不通过时，返回了原字段而非用户填写后的bug
 {#2、 生成评论的虚拟数据#}
 {#3、 遮盖评论功能实现#}
 {#4、 首页链接到评论#}
 5、 Ckeditor解析后的html可能存在问题，导致评论框包含在文章里面
 6、 last seen
-7、 关注他的人
+7、 暂不实现-关注他的人
 {#8、 ajax管理评论#}
 9、 暂不解决-样式问题，遮盖按钮与时间戳为同胞，都是float: left;
     应该将评论的遮盖按钮与时间戳绑定，这样不会用户信息太长导致遮盖按钮先被挤下去
     然而并不打算改这个bug。。要重新写CSS表。。好麻烦
+10、用户在自己的界面希望看到上次登录，而不是刚才的登录时间。
