--- a/todo.html
+++ b/todo.html
@@ -4,7 +4,7 @@
 {#2、 生成评论的虚拟数据#}
 {#3、 遮盖评论功能实现#}
 {#4、 首页链接到评论#}
-5、 Ckeditor解析后的html可能存在问题，导致评论框包含在文章里面
+{#5、 Ckeditor解析后的html可能存在问题，导致评论框包含在文章里面#}
 6、 last seen
 7、 暂不实现-关注他的人
 {#8、 ajax管理评论#}
