--- a/todo.html
+++ b/todo.html
@@ -5,7 +5,7 @@
 {#3、 遮盖评论功能实现#}
 {#4、 首页链接到评论#}
 {#5、 Ckeditor解析后的html可能存在问题，导致评论框包含在文章里面#}
-6、 last seen
+{#6、 修改用户名时应自动化更改默认头像#}
 7、 暂不实现-关注他的人
 {#8、 ajax管理评论#}
 9、 暂不解决-样式问题，遮盖按钮与时间戳为同胞，都是float: left;
@@ -13,6 +13,6 @@
     然而并不打算改这个bug。。要重新写CSS表。。好麻烦
 10、用户在自己的界面希望看到上次登录，而不是刚才的登录时间。
 11、500 提交反馈
-12、根据用户名生成头像A-Z
-13、匿名用户从首页点击评论，不会跳至锚点(没有评论框了)
+{#12、根据用户名生成头像A-Z#}
+{#13、匿名用户从首页点击评论，不会跳至锚点(没有评论框了)#}
 14、注册时提示邮箱已存在时，给用户提供登录链接，填入用户邮箱
